--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,36 @@
-permissions:
-  contents: read
-  actions: read
-  name: Compile ESP32 INO
+name: Compile ESP32 INO
 
 on:
   workflow_dispatch:
+
+permissions:
+  contents: read
+  actions: read
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Arduino CLI
-        uses: arduino/setup-arduino-cli@v1
+    - name: Set up Arduino CLI
+      uses: arduino/setup-arduino-cli@v1
+      with:
+        version: latest
 
-      - name: Install ESP32 core
-        run: |
-          arduino-cli core update-index
-          arduino-cli core install esp32:esp32
+    - name: Install ESP32 board support
+      run: |
+        arduino-cli core update-index
+        arduino-cli core install esp32:esp32
 
-      - name: Compile sketch
-        run: |
-          arduino-cli compile --fqbn esp32:esp32:esp32 your_sketch.ino
+    - name: Compile the sketch
+      run: |
+        arduino-cli compile --fqbn esp32:esp32:esp32 YOUR_SKETCH_FOLDER
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-    
-        with:
-          name: compiled-ino
-          path: ./build
+    - name: Upload build artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: compiled-esp32
+        path: YOUR_SKETCH_FOLDER/build/esp32.esp32.esp32/
